--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,57 @@
-div {
-    color: red;
-    font-size: 30px;
+@import "assets/font/font.css";
+
+html {
+    font-size: 4px;
+}
+
+body {
+    font-family: Inter, serif;
+    padding: 0;
+    margin: 0;
+    --transition: .4s;
+}
+
+.white_theme {
+    --blue: #41A4DF;
+    --blue-deep: #297EE2;
+    --blue-transparent-12: rgba(41, 126, 226, 0.12);
+    --blue-transparent-16: rgba(65, 164, 223, 0.16);
+    --white: #ffffff;
+    --white-transparent-60: rgba(255, 255, 255, 0.6);
+    --dark: #0D0D12;
+    --black_transparent_30: rgba(0, 0, 0, .3);
+}
+
+img {
+    width: 100%;
+}
+
+.container {
+    margin: 0 auto;
+    width: 1200px;
+}
+
+.offset_top20 {
+    padding: 20px 0;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex.center {
+    justify-content: center;
+    align-items: center;
+}
+
+.mb_20 {
+    margin-bottom: 5rem;
+}
+
+.mb_32 {
+    margin-bottom: 8rem;
+}
+
+.mb_56 {
+    margin-bottom: 14rem;
 }
