--- a/src/assets/styles/hero.css
+++ b/src/assets/styles/hero.css
@@ -1,8 +1,13 @@
 .hero {
+    padding: 20px 0;
     width: 100%;
     display: flex;
     gap: 20px;
     align-items: center;
+}
+
+.hero_avatars {
+    display: flex;
 }
 
 .hero_content {
@@ -10,6 +15,9 @@
 }
 
 .hero_avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 96px;
     height: 96px;
     border-radius: 50%;
