--- a/src/assets/font/font.css
+++ b/src/assets/font/font.css
@@ -12,6 +12,18 @@
 
 @font-face {
     font-family: 'Inter';
+    src: url('Inter-Medium.eot');
+    src: local('Inter Medium'), local('Inter-Medium'),
+    url('Inter-Medium.eot?#iefix') format('embedded-opentype'),
+    url('Inter-Medium.woff2') format('woff2'),
+    url('Inter-Medium.woff') format('woff'),
+    url('Inter-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Inter';
     src: url('Inter-SemiBold.eot');
     src: local('Inter Semi Bold'), local('Inter-SemiBold'),
     url('Inter-SemiBold.eot?#iefix') format('embedded-opentype'),
