--- a/src/assets/styles/message.css
+++ b/src/assets/styles/message.css
@@ -1,4 +1,3 @@
-
 .message {
     font-family: 'SF Pro', serif;
     box-sizing: border-box;
@@ -11,10 +10,15 @@
     font-size: 5rem;
     line-height: 1.15;
     letter-spacing: -0.596px;
+    word-break: break-word;
 }
 
 .message.first {
     border-radius: 18px 18px 9px 9px;
+}
+
+.message.center {
+    border-radius: 9px;
 }
 
 .message.last {
@@ -25,6 +29,17 @@
     padding-bottom: 32px;
 }
 
+.message.preview {
+    display: flex;
+    align-items: center;
+    font-size: 4.3rem;
+    line-height: 1.1;
+    gap: 3.25rem;
+    border-radius: 24px;
+    background: var(--three-lightblue-gradient);
+    box-shadow: 0 -2px 20px 0 rgba(0, 0, 0, 0.02);
+}
+
 .message.link {
     color: var(--white);
     font-weight: 500;
@@ -33,6 +48,37 @@
     align-items: center;
     background: var(--blue-dim);
     padding: 15px;
+}
+
+.message.button {
+    font-weight: 500;
+    color: var(--white);
+    padding: 3.75rem 0;
+    display: flex;
+    justify-content: center;
+    background: rgba(54, 136, 194, 0.82);
+    transition: .2s;
+}
+
+.message.button.active {
+    background: rgba(32, 114, 172, 0.82);
+}
+
+
+.allocate, .back_arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.back_arrow {
+    gap: 2.3rem;
+}
+
+.message.button.active .allocate:before, .message.button.active .allocate:after {
+    content: '\2022';
+    color: var(--white);
 }
 
 .message.last_triangle:before {
@@ -71,18 +117,51 @@
     transform: translate(-125%, 0) rotate(45deg);
 }
 
-.message img.icon {
-    width: 20px;
-    height: 20px;
-}
-
 .message .bold {
     font-weight: 700;
 }
 
-.message .name {
+.message .semi_bold {
+    font-weight: 600;
+}
+
+.message .medium {
     font-weight: 500;
+}
+
+.message .name {
     color: var(--blue-dark);
+}
+
+.message.preview .sender {
+    flex: 1;
+}
+
+.message.preview .content {
+    flex: 6.7;
+}
+
+.sender_wrapper {
+    position: relative;
+    width: 100%;
+    padding-top: 100%;
+}
+
+.sender_wrapper .avatar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.messenger {
+    position: absolute;
+    right: -1rem;
+    bottom: -1rem;
+    border-radius: 4px;
 }
 
 .message_time {
@@ -90,6 +169,22 @@
     font-size: 3.85rem;
     color: var(--dark-transparent-40);
     line-height: 1.37;
-    right: 17px;
-    bottom: 10px;
+    right: 4.25rem;
+    bottom: 2.5rem;
+}
+
+.message_time.top {
+    bottom: initial;
+    top: 2.5rem;
+}
+
+.message.hide {
+    display: none;
+}
+
+.message.behind {
+    color: transparent;
+    opacity: .4;
+    transform: scale(0.9);
+    margin-bottom: -30%;
 }
