--- a/src/assets/styles/text.css
+++ b/src/assets/styles/text.css
@@ -5,6 +5,7 @@
     line-height: 1.2;
     color: var(--dark);
 }
+
 .text.white {
     color: var(--white);
 }
@@ -13,6 +14,6 @@
     font-weight: 500;
 }
 
-.text .backlight {
+.text .backlight, .text.blue {
     color: var(--blue);
 }
