--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 .white_theme {
+    --grey: #F7F9FB;
     --blue: #41A4DF;
     --blue-dim: #96ADC6;
     --blue-deep: #297EE2;
@@ -24,11 +25,15 @@ body {
     --dark: #0D0D12;
     --dark-transparent-40: rgba(17, 17, 17, 0.40);
     --dark-blue: #232328;
+    --background-light: #F7F9FB;
     --black_transparent_30: rgba(0, 0, 0, .3);
     --pink-gradient: linear-gradient(340deg, #FAACA8 8.42%, #DDD6F3 91.45%);
     --yellow-gradient: linear-gradient(207deg, #FCB69F 6.91%, #FFECD2 92.45%);
     --blue-gradient: linear-gradient(0deg, #C2E9FB -16.6%, #A1C4FD 106.15%);
     --lightblue-gradient: linear-gradient(233deg, #9FCCFA -20.48%, #0974F1 97.38%);
+    --three-lightblue-gradient: linear-gradient(98deg, #E8F2F9 15.04%, #E8F2F9 52.22%, #E9F1FA 90.93%);
+    --purple-gradient: linear-gradient(297deg, #8EC5FC 8.25%, #E0C3FC 91.76%);
+    --dark-gradient: linear-gradient(220deg, #010417 10.26%, #2B333F 84.25%), linear-gradient(46deg, #000 15.89%, #434343 171.16%);
 }
 
 img {
@@ -39,13 +44,29 @@ img {
     width: 100%;
 }
 
+.segment.grey {
+    background: var(--grey);
+}
+
+.segment.white {
+    background: var(--white);
+}
+
+.segment.last {
+    border-radius: 0 0 40px 40px;
+}
+
 .container {
     margin: 0 auto;
     width: 1200px;
 }
 
+.offsets_top {
+    padding-top: 30rem;
+}
+
 .offsets_bottom {
-    margin-bottom: 120px;
+    padding-bottom: 30rem;
 }
 
 .mb_20 {
@@ -58,4 +79,25 @@ img {
 
 .mb_56 {
     margin-bottom: 14rem;
+}
+
+.width_60 {
+    flex: 1.2;
+}
+
+.width_40 {
+    flex: 1;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 0;
+    padding-inline-start: 8rem;
+}
+
+.list.numeric {
+    padding: 0;
+    list-style-position: inside;
 }
