--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -1,45 +1,53 @@
 .header {
     width: 100%;
-    height: 144px;
+    height: 36rem;
     font-size: 3rem;
     display: flex;
     align-items: center;
 }
 
-.header_content {
+.header_content, .footer_content {
     display: flex;
     justify-content: space-between;
 }
 
-.header_logo {
-    height: 64px;
-    width: 64px;
+.footer_content {
+    padding: 20rem 0 10rem;
+}
+
+.header_logo, .footer_logo {
+    height: 16rem;
+    width: 16rem;
     border-radius: 16px;
     overflow: hidden;
 }
 
 .header_actions {
     display: flex;
-    gap: 8px;
+    gap: 2rem;
 }
 
-.header_menu {
+.header_menu, .footer_menu {
     width: 700px;
     display: flex;
-    gap: 32px;
+    gap: 8rem;
     justify-content: center;
     align-items: center;
 }
 
-.header_menu .header_menu_item {
+.header_menu .header_menu_item, .footer_menu .footer_menu__item {
     font-size: 5rem;
     font-weight: 500;
     line-height: 1.2;
 }
 
+.footer_menu .footer_menu__item {
+    color: var(--white);
+}
+
 .header_buttons {
     display: flex;
-    gap: 8px;
+    gap: 2rem;
     align-items: center;
 }
 
@@ -47,9 +55,9 @@
     cursor: pointer;
     background: transparent;
     border: none;
-    padding: 8px;
+    padding: 2rem;
     box-sizing: content-box;
-    width: 32px;
-    height: 32px;
+    width: 8rem;
+    height: 8rem;
 }
 
