CB-006 update styles and layout

--- a/src/assets/styles/button.css
+++ b/src/assets/styles/button.css
@@ -6,7 +6,7 @@
     border-radius: 900px;
     border: none;
     cursor: pointer;
-    transition: var(--transition);
+    transition: .2s;
 }
 
 .button:focus, .button.active {
