--- a/src/assets/styles/hero.css
+++ b/src/assets/styles/hero.css
@@ -1,9 +1,16 @@
 .hero {
-    padding: 20px 0;
+    padding: 5rem 0;
     width: 100%;
     display: flex;
-    gap: 20px;
+    gap: 5rem;
     align-items: center;
+}
+
+.hero_about {
+    display: flex;
+    flex-direction: column;
+    gap: 8rem;
+    text-align: left;
 }
 
 .hero_avatars {
@@ -14,22 +21,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 96px;
-    height: 96px;
+    width: 24rem;
+    height: 24rem;
     border-radius: 50%;
     overflow: hidden;
     background: var(--white);
 }
 
 .hero_avatar:not(.hero_avatar:first-child) {
-    margin-left: -24px;
+    margin-left: -6rem;
 }
 
 .hero_avatar_img {
     border-radius: 50%;
     overflow: hidden;
-    height: 88px;
-    width: 88px;
+    height: 22rem;
+    width: 22rem;
 }
 
 .hero_phone {
@@ -40,7 +47,6 @@
 .hero_phone-wrap {
     width: 80%;
 }
-
 
 .hero_phone__image {
     position: absolute;
