--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import "assets/font/font.css";
+@import "assets/styles/header.css";
 @import "assets/styles/list.css";
 @import "assets/styles/layout.css";
 @import "assets/styles/typography.css";
