--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -1,9 +1,12 @@
+.header, .header_buttons {
+    display: flex;
+    align-items: center;
+}
+
 .header {
     width: 100%;
     height: 36rem;
     font-size: 3rem;
-    display: flex;
-    align-items: center;
 }
 
 .footer {
@@ -29,16 +32,19 @@
 
 .header_menu, .footer_menu {
     width: 700px;
-    display: flex;
     gap: 8rem;
-    justify-content: center;
-    align-items: center;
+}
+
+.header_menu .header_menu_item {
+    color: var(--dark);
 }
 
 .header_menu .header_menu_item, .footer_menu .footer_menu__item {
+    cursor: pointer;
     font-size: 5rem;
     font-weight: 500;
     line-height: 1.2;
+    text-decoration: none;
 }
 
 .footer_menu .footer_menu__item {
@@ -46,9 +52,7 @@
 }
 
 .header_buttons {
-    display: flex;
     gap: 2rem;
-    align-items: center;
 }
 
 .header_buttons .theme_toggle {
