--- a/src/assets/styles/typography.css
+++ b/src/assets/styles/typography.css
@@ -82,7 +82,6 @@ a.link:hover {
     color: #FCEF8F;
 }
 
-
 .white_color {
     color: #ffffff;
 }
@@ -91,8 +90,16 @@ a.link:hover {
     color: #41A4DF;
 }
 
-.bold_text {
+.medium_text {
     font-weight: 500;
+}
+
+.semi_bold_text {
+    font-weight: 600;
+}
+
+.bold_text {
+    font-weight: 700;
 }
 
 @media only screen and (max-width: var(--mobile-breakpoint)) {
