CB-007 change background image to css

--- a/src/assets/styles/api.css
+++ b/src/assets/styles/api.css
@@ -4,6 +4,7 @@
 }
 
 .api_wrapper {
+    background-image: var(--api);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
