--- a/src/assets/styles/hero.css
+++ b/src/assets/styles/hero.css
@@ -45,14 +45,10 @@
 }
 
 .hero_phone-wrap {
-    width: 80%;
+    padding-top: 125%;
+    width: 61%;
+    background-image: var(--phone);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
-
-.hero_phone__image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
