--- a/src/assets/styles/button.css
+++ b/src/assets/styles/button.css
@@ -1,4 +1,6 @@
 .button {
+    display: block;
+    text-align: center;
     padding: 4.5rem 10.5rem;
     font-size: 5rem;
     font-weight: 500;
@@ -57,7 +59,7 @@
     border-color: #ffffff;
 }
 
-@media only screen and (max-width: var(--mobile-breakpoint)) {
+@media only screen and (max-width: 980px) {
     .button {
         padding: 3rem 8rem;
         font-size: 4.5rem;
