--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -4,8 +4,7 @@
 }
 
 .header {
-    width: 100%;
-    height: 36rem;
+    padding: 10rem 0;
     font-size: 3rem;
 }
 
@@ -16,6 +15,8 @@
 .header_content, .footer_content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 .header_logo, .footer_logo {
@@ -28,10 +29,12 @@
 .header_actions {
     display: flex;
     gap: 2rem;
+    flex: 1;
+    justify-content: flex-end;
 }
 
 .header_menu, .footer_menu {
-    width: 700px;
+    width: 58.3%;
     gap: 8rem;
 }
 
@@ -66,4 +69,19 @@
     box-sizing: content-box;
     width: 8rem;
     height: 8rem;
+}
+
+@media (max-width: 830px) {
+    .header {
+        padding: 10rem 0 5rem;
+    }
+
+    .header_logo, .footer_logo {
+        width: 11.5rem;
+        height: 11.5rem;
+    }
+
+    .header_menu, .footer_menu {
+        display: none;
+    }
 }
