--- a/src/assets/styles/message.css
+++ b/src/assets/styles/message.css
@@ -93,6 +93,11 @@
     border-bottom-right-radius: 20px;
 }
 
+.message.last_triangle .message_content {
+    position: relative;
+    z-index: 2;
+}
+
 .link_arrow {
     top: 2rem;
     right: 2rem;
@@ -177,4 +182,58 @@
     opacity: .4;
     transform: scale(0.9);
     margin-bottom: -30%;
+}
+
+@media (max-width: 980px) {
+    .message {
+        font-size: 3.5rem;
+        padding: 1.75rem 2.8rem;
+        border-radius: 12px;
+    }
+
+    .message.preview {
+        border-radius: 13px;
+        font-size: 2.25rem;
+    }
+
+    .message.first {
+        border-radius: 12px 12px 6px 6px;
+    }
+
+    .message.center {
+        border-radius: 6px;
+    }
+
+    .message.last {
+        border-radius: 6px 6px 12px 12px;
+    }
+
+    .pointer {
+        width: 7.75rem;
+        height: 7.75rem;
+    }
+
+    .message.big {
+        padding-bottom: 5rem;
+    }
+
+    .code {
+        font-size: 3rem;
+    }
+
+    .message_time {
+        font-size: 2.51rem;
+        right: 2.8rem;
+        bottom: 1.75rem;
+    }
+
+    .message_time.top {
+        bottom: initial;
+        top: 1.75rem;
+    }
+
+    .messenger {
+        width: 10px;
+        height: 10px;
+    }
 }
