--- a/src/assets/styles/typography.css
+++ b/src/assets/styles/typography.css
@@ -102,7 +102,7 @@ a.link:hover {
     font-weight: 700;
 }
 
-@media only screen and (max-width: var(--mobile-breakpoint)) {
+@media only screen and (max-width: 980px) {
     h1.title {
         font-size: 11.5rem;
         letter-spacing: -1.38px;
