--- a/src/assets/styles/util_styles.css
+++ b/src/assets/styles/util_styles.css
@@ -14,10 +14,6 @@
     margin-bottom: 6rem;
 }
 
-.mb_32 {
-    margin-bottom: 8rem;
-}
-
 .mb_56 {
     margin-bottom: 14rem;
 }
@@ -58,4 +54,24 @@
 
 .background_purple_grad {
     background: var(--purple-gradient);
+}
+
+@media (max-width: 980px) {
+    .offsets_top {
+        padding-top: 25rem;
+    }
+
+    .offsets_bottom {
+        padding-bottom: 25rem;
+    }
+}
+
+@media all and (max-width: 820px) {
+    .offsets_top {
+        padding-top: 20rem;
+    }
+
+    .offsets_bottom {
+        padding-bottom: 20rem;
+    }
 }
